@@ -5,6 +5,7 @@ Unreleased Version 2.3.1-pre
  * Server Fix: Only show the fact that a session was reported in the event log, but leave the details to only be visible to the server owners. Thanks Liz for reporting.
  * Feature: Allow setting a blank brush cursor in the tools preferences. Thanks mixnmatt for suggesting.
  * Fix: Work around tablets not reporting when the eraser is brought near. Thanks Lauwenmark for reporting.
+ * Feature: Show rectangle selection extents in the status bar. Thanks Mercia for suggesting.
 
 2025-11-18 Version 2.3.0
  * Fix: Don't show "exit layer view" notice when there's no canvas.
